Stopped header wrapping on mobile

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,8 +17,10 @@
 	position: relative;
 	top: 25px;
 	@include mobile-narrow {
-		margin: 0 40px .1em 0;
+		margin: 0 15px .1em 0;
 		top: 0px;
+		line-height: 1.0;
+		display: inline-block;
 	}
 }
 
